# annotation-qc-cli

./: .gitignore  README.md  pyproject.toml
src/annotqc/: loader.py
