[build-system]
requires = ["setuptools>=68, "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "annotqc"
version = "0.1.0"
description = "A CLI tool for quality-checking annotation datasets"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
annotqc = "annotqc.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"